@@ -293,7 +293,7 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"  var posSt = -1; var posEnd = 0;\n"
 	"  for( var i = 0; i < str.length; i++ )\n"
 	"    if( str[i] != ' ' ) { if(posSt<0) posSt=i; posEnd = i; }\n"
-	"  return str.substr(posSt,posEnd-posSt);\n"
+	"  return (posSt>=0)?str.substr(posSt,posEnd-posSt+1):'';\n"
 	"}\n"
 	"/***************************************************\n"
 	" * nodeText - Get DOM node text                    *\n"
@@ -311,16 +311,12 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"function posGetX(obj)\n"
 	"{\n"
 	"  var posX = 0;\n"
-	"  while( obj && obj != document.getElementsByTagName('body') )\n"
-	"  { posX += obj.offsetLeft; obj=obj.parentNode; };\n"
-	"  return posX;\n"
-	//"  var posX = 0;\n"
-	//"  while(obj.offsetParent)\n"
-	//"  {\n"
-	//"     posX+=(obj.offsetLeft-obj.offsetParent.scrollLeft);\n"
-	//"     obj=obj.offsetParent;\n"
-	//"  }\n"
-	//"  return posX+obj.offsetLeft+document.body.scrollLeft-document.body.clientLeft;\n"
+	"  while(obj.offsetParent)\n"
+	"  {\n"
+	"     posX+=(obj.offsetLeft-obj.offsetParent.scrollLeft);\n"
+	"     obj=obj.offsetParent;\n"
+	"  }\n"
+	"  return posX+obj.offsetLeft+document.body.scrollLeft-document.body.clientLeft;\n"
 	"}\n"
 	"/***************************************************\n"
 	" * posGetY - Get absolute position                 *\n"
@@ -860,13 +856,21 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"              var argCfg = this.parentNode.cfg.split(':');\n"
 	"              this.value = ((argCfg.length>3)?argCfg[3]:'')+Math.max((argCfg.length>1)?parseInt(argCfg[0]):0,Math.min((argCfg.length>1)?parseInt(argCfg[1]):100,parseInt(val)))+((argCfg.length>4)?argCfg[4]:'');\n"
 	"              break;\n"
-	"           case 3:\n"
+	"            case 3:\n"
 	"              var argCfg = this.parentNode.cfg.split(':');\n"
 	"              this.value = ((argCfg.length>3)?argCfg[3]:'')+Math.max((argCfg.length>1)?parseFloat(argCfg[0]):0,Math.min((argCfg.length>1)?parseFloat(argCfg[1]):100,parseFloat(val))).toFixed((argCfg.length>5)?parseInt(argCfg[5]):2)+((argCfg.length>4)?argCfg[4]:'');\n"
 	"              break;\n"
-	"           case 4:\n"
+	"            case 4:\n"
+	"              var rez = (this.parentNode.cfg.length) ? this.parentNode.cfg : 'hh:mm';\n"
+	"              var v = Math.floor(val/3600)%(ap?12:24); rez = rez.replace('hh',(v.length==1)?'0'+v:v); rez = rez.replace('h',v);\n"
+	"              v = Math.floor(val/60)%60; rez = rez.replace('mm',(v.length==1)?'0'+v:v); rez = rez.replace('m',v);\n"
+	"              v = val%60; rez = rez.replace('ss',(v.length==1)?'0'+v:v); rez = rez.replace('s',v);\n"
+	"              if( rez.indexOf('ap') >= 0 ) { rez = rez.replace('ap',(val>=43200)?'pm':'am'); var ap = true; }\n"
+	"              if( rez.indexOf('AP') >= 0 ) { rez = rez.replace('AP',(val>=43200)?'PM':'AM'); var ap = true; }\n"
+	"              this.value = rez;\n"
 	"          }\n"
 	"          this.saveVal = this.value;\n"
+	"          this.srcVal = val;\n"
 	"        }\n"
 	"        formObj.valGet = function( )\n"
 	"        {\n"
@@ -889,6 +893,40 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"              tmp = (argCfg&&argCfg.length>4)?noSpace(argCfg[4]):'';\n"
 	"              if( tmp.length && rez.indexOf(tmp) >= 0 ) rez=rez.substring(0,rez.indexOf(tmp));\n"
 	"              return parseFloat(rez);\n"
+	"            case 4:\n"
+	"              var cfg  = this.parentNode.cfg;\n"
+	"              var rez  = this.value;\n"
+	"              if( cfg.indexOf('ap') >= 0 || cfg.indexOf('AP') >= 0 )\n"
+	"              { cfg = cfg.replace('ap',''); cfg = cfg.replace('AP',''); rez = rez.replace('am',''); rez = rez.replace('AM',''); rez = rez.replace('pm',''); rez = rez.replace('PM',''); }\n"
+	"              var rez = rez.replace('AM',''); \n"
+	"              var hour = (parseInt(this.srcVal)/3600).toFixed(0);\n"
+	"              var min  = ((parseInt(this.srcVal)/60)%60).toFixed(0);\n"
+	"              var sec  = (parseInt(this.srcVal)%60).toFixed(0);\n"
+	"              var i = 0; var lstS = ''; var lenS = 0;\n"
+	"              while( true )\n"
+	"              {\n"
+	"                if( i >= cfg.length || cfg.charAt(i) == 'h' || cfg.charAt(i) == 'm' || cfg.charAt(i) == 's' )\n"
+	"                {\n"
+	"                  var space = lenS ? noSpace(cfg.substr(i-lenS,lenS)) : '';\n"
+	"                  if( (space.length && lstS != '') || i >= cfg.length )\n"
+	"                  {\n"
+	"                    if( space.length && rez.indexOf(space) == -1 ) return 0;\n"
+	"                    var val = parseInt(space.length?rez.substr(0,rez.indexOf(space)):rez);\n"
+	"                    rez = rez.substr(rez.indexOf(space));\n"
+	"                    if( lstS == 'h' ) hour = val; else if( lstS == 'm' ) min = val; else if( lstS == 's' ) sec = val;\n"
+	"                    if( i >= cfg.length ) break;\n"
+	"                  }\n"
+	"                  if( space.length )\n"
+	"                  {\n"
+	"                    if( rez.indexOf(space) == -1 ) return 0;\n"
+	"                    rez = rez.substr(rez.indexOf(space)+space.length);\n"
+	"                  }\n"
+	"                  lstS = cfg.charAt(i); lenS = 0; i++; continue;\n"
+	"                }\n"
+	"                lenS++; i++;\n"
+	"              }\n"
+	"              if( this.value.indexOf('pm') >= 0 || this.value.indexOf('PM') >= 0 ) hour+=12;\n"
+	"              return (hour%24)*3600+(min%60)*60+(sec%60);\n"
 	"          }\n"
 	"        }\n"
 	"        formObj.chApply = function( )\n"
