@@ -1,3 +1,7 @@
+2008-09-2 Roman
+- !:/UI/WebVision: Time view of FormEl is made.
+
+
 2008-09-2 Maxim
 - FIX:/UI/WebVision: Unification of rounding of geometry of widgets is done.
 
